fix: navbar z-index and paddings in main tags

--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -34,6 +34,7 @@
     main {
       max-width: 800px;
       margin: 0 auto;
+      padding: 0px 10px 20px 10px;
   
       .room-title {
         margin: 32px 0 24px;
@@ -55,6 +56,13 @@
           font-weight: 500;
           font-size: 14px;
         }
+      }
+
+      .routes-list {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
       }
   
       form {
